.provarCaches/00DdL000006WmAzUAK/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Average_Entrance_Score__c</fullName>
        <formula>Total_Entrance_Score__c /  Total_Student__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Entrance Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Duration__c</fullName>
        <label>Course Duration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Highest_Entrance_Score__c</fullName>
        <label>Highest Entrance Score</label>
        <summarizedField>Student__c.Entrance_Score__c</summarizedField>
        <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lowest_Entrance_Score__c</fullName>
        <label>Lowest Entrance Score</label>
        <summarizedField>Student__c.Entrance_Score__c</summarizedField>
        <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Entrance_Score__c</fullName>
        <label>Total Entrance Score</label>
        <summarizedField>Student__c.Entrance_Score__c</summarizedField>
        <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Instructor__c</fullName>
        <label>Total Instructor</label>
        <summaryForeignKey>Instructor__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Student__c</fullName>
        <label>Total Student</label>
        <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Duration__c</columns>
        <columns>Fees__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>